[package]
name = "past202012-open"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
past202012-open-a = { alias = "a", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_a" }
past202012-open-b = { alias = "b", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_b" }
past202012-open-c = { alias = "c", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_c" }
past202012-open-d = { alias = "d", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_d" }
past202012-open-e = { alias = "e", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_e" }
past202012-open-f = { alias = "f", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_f" }
past202012-open-g = { alias = "g", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_g" }
past202012-open-h = { alias = "h", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_h" }
past202012-open-i = { alias = "i", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_i" }
past202012-open-j = { alias = "j", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_j" }
past202012-open-k = { alias = "k", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_k" }
past202012-open-l = { alias = "l", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_l" }
past202012-open-m = { alias = "m", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_m" }
past202012-open-n = { alias = "n", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_n" }
past202012-open-o = { alias = "o", problem = "https://atcoder.jp/contests/past202012-open/tasks/past202012_o" }

[[bin]]
name = "past202012-open-a"
path = "src/bin/a.rs"

[[bin]]
name = "past202012-open-b"
path = "src/bin/b.rs"

[[bin]]
name = "past202012-open-c"
path = "src/bin/c.rs"

[[bin]]
name = "past202012-open-d"
path = "src/bin/d.rs"

[[bin]]
name = "past202012-open-e"
path = "src/bin/e.rs"

[[bin]]
name = "past202012-open-f"
path = "src/bin/f.rs"

[[bin]]
name = "past202012-open-g"
path = "src/bin/g.rs"

[[bin]]
name = "past202012-open-h"
path = "src/bin/h.rs"

[[bin]]
name = "past202012-open-i"
path = "src/bin/i.rs"

[[bin]]
name = "past202012-open-j"
path = "src/bin/j.rs"

[[bin]]
name = "past202012-open-k"
path = "src/bin/k.rs"

[[bin]]
name = "past202012-open-l"
path = "src/bin/l.rs"

[[bin]]
name = "past202012-open-m"
path = "src/bin/m.rs"

[[bin]]
name = "past202012-open-n"
path = "src/bin/n.rs"

[[bin]]
name = "past202012-open-o"
path = "src/bin/o.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
